# xnormal-batch-baker

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  package.yaml  requirements.txt  setup.cfg  setup.py  xNormalBatchBakerForMaya.py
tests/: test_general.py
tp/tools/game/: __init__.py
xNormalBatchBaker/: __init__.py  __version__.py  xNormalBatchBakerStyle.css
xNormalBatchBaker/core/: xnormalbatchbaker.py
