[metadata]
name = xnormalbatchbaker
description = Tool that allows 3d artists to smooth its workflow when baking maps using xNormal
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: xNormalBatchBaker.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpoveda/xNormalBatchBaker

[options]
zip_safe = False
include_package_data = true
package_dir=
    =xNormalBatchBaker
packages=find:
install_requires =
    coveralls
    tpPyUtils
    tpDccLib
    tpQtLib
    comtypes

[options.packages.find]
where=xNormalBatchBaker
[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1